--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start": "nodemon index.js"
   },
   "dependencies": {
-    "dotenv": "^8.2.0"
+    "dotenv": "^8.2.0",
+    "mongoose": "^5.8.6"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
