--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.19.1",
+    "cron": "^1.7.2",
     "dotenv": "^8.2.0",
     "mongoose": "^5.8.6"
   },
