--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "author": "IlonaMenkui <ilonaspolding@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "NODE_ENV=development nodemon index.js"
   },
   "dependencies": {
     "axios": "^0.19.1",
