--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.19.1",
     "cron": "^1.7.2",
     "dotenv": "^8.2.0",
+    "lodash": "^4.17.15",
     "mongoose": "^5.8.6"
   },
   "devDependencies": {
