--- a/package.json
+++ b/package.json
@@ -7,17 +7,19 @@
   "author": "IlonaMenkui <ilonaspolding@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "NODE_ENV=development nodemon index.js"
   },
   "dependencies": {
     "axios": "^0.19.1",
     "cron": "^1.7.2",
     "dotenv": "^8.2.0",
+    "lodash": "^4.17.15",
     "mongoose": "^5.8.6"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.20.0",
     "nodemon": "^2.0.2"
   }
 }
