--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.19.1",
     "cron": "^1.7.2",
+    "debug": "^4.1.1",
     "dotenv": "^8.2.0",
     "lodash": "^4.17.15",
     "mongoose": "^5.8.6"
