remove full lodash package by one method

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "cron": "^1.7.2",
     "debug": "^4.1.1",
     "dotenv": "^8.2.0",
-    "lodash": "^4.17.15",
+    "lodash.isequal": "^4.5.0",
     "mongoose": "^5.8.6"
   },
   "devDependencies": {
